# HelloGl

./: .gitignore  CMakeLists.txt  HelloGl.sln
Debug/: HelloGl.ilk
HelloGl/: Errors.h  HelloGl.vcxproj  HelloGl.vcxproj.filters  Matrix4.h  RenderBatch.cpp  RenderBatch.h  RenderCamera.cpp  RenderCamera.h  ShaderLoader.cpp  ShaderLoader.h  TransformMatrix.h  Vector3.h  Vector4.h  Vertex.h  VertexManager.cpp  VertexManager.h  VertexPrimitive.cpp  VertexPrimitive.h  main.cpp  simple_fragment_shader.glsl  simple_vertex_shader.glsl  vertex_shader.glsl
HelloGl/Debug/: vc120.idb
HelloGl/Debug/HelloGl.tlog/: CL.read.1.tlog  CL.write.1.tlog  HelloGl.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: main.cpp
